force-app/main/default/objects/vlocity_ins__CustomerInteraction__c/fields/vlocity_ins__ConsoleCardLayout__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ConsoleCardLayout__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Console Card Layout</label>
    <length>255</length>
    <type>Text</type>
</CustomField>