force-app/main/default/objects/vlocity_ins__CustomerInteraction__c/fields/vlocity_ins__EndDateTime__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__EndDateTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>