force-app/main/default/objects/vlocity_ins__CustomerInteraction__c/fields/vlocity_ins__StartDateTime__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__StartDateTime__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>