force-app/main/default/objects/vlocity_ins__CustomerInteraction__c/fields/vlocity_ins__VerificationTimestamp__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__VerificationTimestamp__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Verification Timestamp</label>
    <type>DateTime</type>
</CustomField>